--- a/public/templates/public/base.html
+++ b/public/templates/public/base.html
@@ -15,12 +15,14 @@
      crossorigin=""/>
 
     <link rel="stylesheet" href="{% static 'public/css/styles.css' %}">
+    <link rel="icon" href="{% static 'public/images/favicon.png' %}" type="image/x-icon">
     {% block extra_head %}{% endblock %}
+
 </head>
 <body>
     <header class="site-header">
         <nav class="main-nav">
-            <a href="{% url 'public:fantasminha_tracker_page' %}" class="nav-logo">Caça Fantasma</a>
+            <a href="{% url 'public:fantasminha_tracker_page' %}" class="nav-logo">Caça Fantasma <sup>Beta</sup></a> {# MODIFICAÇÃO AQUI #}
             <button class="hamburger-menu" id="hamburgerMenu" aria-label="Abrir menu" aria-expanded="false" aria-controls="navLinks">
                 <span class="hamburger-bar"></span>
                 <span class="hamburger-bar"></span>
