--- a/public/templates/public/base.html
+++ b/public/templates/public/base.html
@@ -22,7 +22,7 @@
 <body>
     <header class="site-header">
         <nav class="main-nav">
-            <a href="{% url 'public:fantasminha_tracker_page' %}" class="nav-logo">Caça Fantasma <sup>Beta</sup></a> {# MODIFICAÇÃO AQUI #}
+            <a href="{% url 'public:fantasminha_tracker_page' %}" class="nav-logo">Caça Fantasma <sup>Beta</sup></a>
             <button class="hamburger-menu" id="hamburgerMenu" aria-label="Abrir menu" aria-expanded="false" aria-controls="navLinks">
                 <span class="hamburger-bar"></span>
                 <span class="hamburger-bar"></span>
@@ -30,6 +30,7 @@
             </button>
             <ul class="nav-links" id="navLinks">
                 <li><a href="{% url 'public:fantasminha_tracker_page' %}">Mapa</a></li>
+                <li><a href="{% url 'public:itinerary_page' %}">Itinerário</a></li> {# <--- LINK ADICIONADO AQUI #}
                 <li><a href="{% url 'public:about_page' %}">Sobre</a></li>
                 <li><a href="{% url 'public:contact_page' %}">Contato</a></li>
             </ul>
