--- a/public/templates/public/fantasminha_map.html
+++ b/public/templates/public/fantasminha_map.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="content-wrapper">
         <h1>Localizador Fantasminha</h1>
-        <button id="toggleLocationBtn">Ativar Localização</button>
+        <button id="toggleLocationBtn">Ativar Localização - Estou no Fantasminha</button>
         <p id="userLocationStatus">Compartilhamento desativado.</p>
 
         <p id="statusMessage">Verificando...</p>
@@ -69,7 +69,7 @@
                 userLocationStatus.className = '';
                 startWatchingLocation();
             } else {
-                toggleLocationBtn.textContent = 'Ativar Localização';
+                toggleLocationBtn.textContent = 'Ativar Localização - Estou no Fantasminha';
                 userLocationStatus.textContent = 'Compartilhamento desativado.';
                 userLocationStatus.className = '';
                 stopWatchingLocation();
