Adicionado Projetos Futuros

--- a/public/templates/public/base.html
+++ b/public/templates/public/base.html
@@ -31,6 +31,7 @@
             <ul class="nav-links" id="navLinks">
                 <li><a href="{% url 'public:fantasminha_tracker_page' %}">Mapa</a></li>
                 <li><a href="{% url 'public:itinerary_page' %}">Itinerário</a></li> {# <--- LINK ADICIONADO AQUI #}
+                <li><a href="{% url 'public:projetos_futuros_page' %}">Projetos Futuros</a></li>
                 <li><a href="{% url 'public:about_page' %}">Sobre</a></li>
                 <li><a href="{% url 'public:contact_page' %}">Contato</a></li>
             </ul>
