Aumentado fetch rate para o mapa

--- a/public/templates/public/fantasminha_map.html
+++ b/public/templates/public/fantasminha_map.html
@@ -241,6 +241,6 @@
 
         // Chamada inicial e intervalo para buscar localizações dos ônibus
         fetchBusLocations();
-        setInterval(fetchBusLocations, 7000); // Atualiza a cada 7 segundos
+        setInterval(fetchBusLocations, 1000); // Atualiza a cada 1// segundos
     </script>
 {% endblock %}
